--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ dataclasses-json==0.6.7
 Deprecated==1.2.14
 dirtyjson==1.0.8
 distro==1.9.0
+docker==7.1.0
 exceptiongroup==1.2.2
 filelock==3.15.4
 frozenlist==1.4.1
@@ -109,7 +110,7 @@ smmap==5.0.1
 sniffio==1.3.1
 soupsieve==2.5
 SQLAlchemy==2.0.31
-streamlit==1.37.1
+streamlit==1.39.0
 striprtf==0.0.26
 sympy==1.13.0
 tenacity==8.5.0
